# Sprint_7

./: .gitignore  README.md  conftest.py  data.py  helper.py  pyproject.toml
allure-report/: index.html
allure-report/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/data/test-cases/: 106ad1764dd30a22.json  1598110470eadd57.json  1b4c1bc9f7a726dd.json  393722f34b14215b.json  39ebb84741c89874.json  3be739c9d29dc6ca.json  511728e842466b1.json  54ba16a9f024e4cf.json  55ba0d5cc133a67a.json  641e6b3261692eec.json  738322e0f8ce08f.json  741a5fd2f8ae840b.json  88266b5de134d70a.json  892b40d297f7938c.json  8db75d60d90ec7a4.json  9e23a3ff360e786f.json  a01f0890c361d248.json  a2c0ea382f5d8282.json  ab4bedd81c776259.json  af41590ee9bf3422.json  b28aa5b0a9c2665b.json  b8415ea3f36613a7.json  bb0e712a666a2f8c.json  d478fd2f0d84d287.json  dcabab839ab0543.json  e05d8c7baa9552a4.json  efd780e7c62740f3.json  f15b523b5c0b4bab.json  f77c7b1294eb1932.json  fba80cf4769f741e.json
allure-report/export/: influxDbData.txt  prometheusData.txt
allure-report/history/: duration-trend.json  history.json
allure-report/widgets/: behaviors.json  duration.json  severity.json  summary.json
tests/: test_accept_order.py  test_create_courier.py  test_create_order.py  test_delete_courier.py  test_get_order_by_track.py  test_login_courier.py  test_orders_list.py
